--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -7,7 +7,9 @@
     \usepackage{authblk} % For multiple authors
     \usepackage{amsmath}
     \usepackage[utf8]{inputenc}
-        \usepackage[T1]{fontenc}
+    %\usepackage[T1]{fontenc}
+    \renewcommand{\rmdefault}{phv} % Arial
+\renewcommand{\sfdefault}{phv} 
 	\usepackage{setspace} % See \doublespacing command at the top of content.tex
     \usepackage{lineno} 	% See \linenumbers at the top of content.tex
     \usepackage{booktabs}
