set 1.5 line spacing for thesis

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -43,6 +43,7 @@
 \affil[3]{Centre for Integrative Ecology, School of Biological Sciences, University of Canterbury, Christchurch, New Zealand}
 
 %\setcounter{page}{54}
+\onehalfspacing % line spacing 1.5 for thesis formatting
 
 \begin{document}
 \maketitle  
